# NFL-BETS

./: .env.example  .gitignore  Dockerfile  MAE_IMPROVEMENT_PLAN.md  README.md  pyproject.toml  railway.json  todo.md
.claude/: claude.md
.github/workflows/: deploy.yml  train-models.yml
api/: __init__.py  main.py  state.py
api/routers/: __init__.py  analytics.py  bankroll.py  games.py  health.py  jobs.py  models.py  predictions.py  value_bets.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: BankrollWidget.tsx  BestBets.tsx  ConfidenceGauge.tsx  GameBetsDisplay.tsx  GameCard.tsx  GameDetailModal.tsx  GameSelector.tsx  ModelStatusBadge.tsx  ThemeToggle.tsx  ValueBetCard.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Progress.tsx  index.ts  (+1 more)
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: api.ts  team-colors.ts
models/trained/: moneyline_model_backup.joblib  moneyline_model_latest.joblib  moneyline_model_optuna.joblib  moneyline_model_v1.0.0.joblib  passing_yards_model_backup.joblib  passing_yards_model_latest.joblib  passing_yards_model_v1.0.0.joblib  receptions_model_backup.joblib  receptions_model_latest.joblib  receptions_model_v1.0.0.joblib  rushing_yards_model_backup.joblib  rushing_yards_model_latest.joblib  rushing_yards_model_v1.0.0.joblib  spread_model_backup.joblib  spread_model_latest.joblib  spread_model_optuna.joblib  spread_model_v1.0.0.joblib  totals_model_optuna.joblib
nfl_bets/: __init__.py  main.py
nfl_bets/analysis/: __init__.py  backtest_analysis.py  calibration_analysis.py  edge_validation.py  feature_analysis.py  model_comparison.py
nfl_bets/betting/: __init__.py  arbitrage_scanner.py  kelly_calculator.py  odds_converter.py  value_detector.py
nfl_bets/config/: constants.py  settings.py
nfl_bets/dashboard/: __init__.py  terminal.py  web.py
nfl_bets/data/: __init__.py  odds_history.py  pipeline.py
nfl_bets/data/cache/: __init__.py  cache_manager.py
nfl_bets/data/sources/: __init__.py  base.py  espn_client.py  ftn_dvoa.py  nflverse.py  odds_api.py  pff_client.py  sic_score.py
nfl_bets/database/: models.py  schemas.py
nfl_bets/features/: __init__.py  base.py  depth_chart_analyzer.py  feature_pipeline.py  game_features.py  injury_features.py  player_features.py  team_features.py  weather_features.py
nfl_bets/models/: __init__.py  base.py  calibration.py  evaluation.py  model_manager.py  moneyline_model.py  residual_spread_model.py  spread_model.py  totals_model.py
nfl_bets/models/player_props/: __init__.py  base_prop.py  passing_yards.py  receiving_yards.py  rushing_yards.py
nfl_bets/notifications/: __init__.py
nfl_bets/scheduler/: __init__.py  jobs.py  orchestrator.py
nfl_bets/scripts/: __init__.py  backtest.py  run_analysis.py  train_models.py
nfl_bets/tracking/: __init__.py  bankroll_manager.py
reports/: moneyline_analysis_fixed.json  moneyline_analysis_post_fix.json  moneyline_analysis_v2.json  spread_analysis.json  spread_analysis_final.json  spread_analysis_new.json  spread_analysis_post_fix.json  totals_analysis.json
scripts/: startup.sh
