[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfl-bets"
version = "0.1.0"
description = "NFL Betting Prediction System with real-time value bet detection"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "NFL Bets" }
]
keywords = ["nfl", "betting", "machine-learning", "sports-analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core data handling
    "polars>=0.19.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",

    # NFL data - nflverse
    "nflreadpy @ git+https://github.com/nflverse/nflreadpy",

    # Machine Learning
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "shap>=0.42.0",
    "optuna>=3.4.0",

    # API clients
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",

    # FastAPI server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",

    # Caching
    "redis>=5.0.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Notifications
    "plyer>=2.1.0",

    # Dashboard - Terminal
    "rich>=13.0.0",

    # Dashboard - Web
    "streamlit>=1.28.0",
    "plotly>=5.18.0",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Logging
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

sms = [
    "twilio>=8.0.0",
]

[project.scripts]
nfl-bets = "nfl_bets.main:main"
nfl-train = "nfl_bets.scripts.train_models:main"
nfl-backtest = "nfl_bets.scripts.backtest:main"

[project.urls]
Homepage = "https://github.com/cgrove-alt/NFL-BETS"
Documentation = "https://github.com/cgrove-alt/NFL-BETS#readme"
Repository = "https://github.com/cgrove-alt/NFL-BETS"

[tool.hatch.build.targets.wheel]
packages = ["nfl_bets"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["nfl_bets"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["nfl_bets/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
